add attribes to html elemets  (style etc.)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-ha
+<h1 style="font-family: sans-serif; text-align: center; color: brown;">Kulvinder Singh Challenge for Wednesday, May 29th </h1>
+<p>Learn about Git and Github. init, clone, add, commit, push etc.</p>
