--- a/index.html
+++ b/index.html
@@ -1,2 +1,150 @@
-<h1 style="font-family: sans-serif; text-align: center; color: brown;">Kulvinder Singh Challenge for Wednesday, May 29th </h1>
-<p>Learn about Git and Github. init, clone, add, commit, push etc.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script src="https://kit.fontawesome.com/fb74ed147c.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Tilal Sharqiyah Trading & Logistics</title>
+
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  
+</head>
+<body>
+    <nav>
+        <div class="logo">
+            <img src="images/logo.png" alt="Logo">
+        </div>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#clients">Clients</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="contact-info">
+            <button id="change-language-btn">GET A FREE QUOTE</button>
+        </div>
+    </nav>
+
+    <header>
+        <div class="hero">
+            <div class="overlay">
+                <h1>Welcome to <span class="underline">Tilal Sharqiyah Trading & Logistics</span></h1>
+                <p>Delivering Excellence Across Multiple Industries</p>
+                <div class="cta-buttons">
+                    <a href="#about-us" class="btn">Learn More</a>
+                    <a href="#contact" class="btn">Contact Us</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section id="about-us" class="about">
+        <div class="about-container">
+            <div class="about-text">
+                <h2>ABOUT US</h2>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <button>Read More</button>
+            </div>
+            <div class="about-image">
+                <img src="images/silder2.jpg" alt="About Us Image">
+            </div>
+        </div>
+        <div class="social-media">
+           <a href="">
+            <i class="fa-brands fa-facebook" style="color: #1471b8;"></i>
+           </a> 
+            
+            <a href=""> <i class="fa-brands fa-square-instagram" style="color: #f43e3e;"></i> </a>
+        </div>
+    </section>
+    <section class="our_services">
+        <div class="container mt-4 text-center">
+            <h2 class="mb-4">Our Services</h2>
+            <div id="servicesCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="d-flex justify-content-center">
+                            <div class="card" style="width: 18rem;">
+                                <img src="images/slider1.jpg" class="card-img-top" alt="Medicine Supplies">
+                                <div class="card-body">
+                                    <h5 class="card-title">Medicine Supplies</h5>
+                                    <p class="card-text">Comprehensive range of pharmaceutical products and medical elements.</p>
+                                    <a href="#" class="btn btn-primary">View More</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="images/silder2.jpg" class="card-img-top" alt="Surgical Items">
+                                <div class="card-body">
+                                    <h5 class="card-title">Surgical Items Supply</h5>
+                                    <p class="card-text">Extensive inventory of surgical instruments and equipment.</p>
+                                    <a href="#" class="btn btn-primary">View More</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="images/silder2.jpg" class="card-img-top" alt="Transportation">
+                                <div class="card-body">
+                                    <h5 class="card-title">Transportation Services</h5>
+                                    <p class="card-text">Reliable and efficient freight forwarding and logistics management.</p>
+                                    <a href="#" class="btn btn-primary">View More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <div class="card" style="width: 18rem;">
+                                <img src="images/slider1.jpg" class="card-img-top" alt="Construction">
+                                <div class="card-body">
+                                    <h5 class="card-title">Construction Services</h5>
+                                    <p class="card-text">Infrastructure development and civil engineering projects.</p>
+                                    <a href="#" class="btn btn-primary">View More</a>
+                                </div>
+                            </div>
+                            <!-- Include additional cards as needed for other slides -->
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#servicesCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#servicesCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    
+    <section id="clients">
+        <div class="container">
+            <h2>Our Clients</h2>
+            <div class="clients-logos">
+                <img src="images/silder2.jpg" alt="AL ANNABA">
+                <img src="images/slider1.jpg" alt="OMAN TRADING ESTABLISHMENT">
+                <img src="images/silder2.jpg" alt="LULU HYPER MARKET">
+                <!-- Add more client logos as needed -->
+            </div>
+        </div>
+    </section>
+
+    <section id="contact-info">
+        <div class="container">
+            <h2>Contact Information</h2>
+            <p>For inquiries, partnerships, or more information about our services, please contact us:</p>
+            <p>Phone: +968 7724 4477</p>
+            <p>Email: <a href="mailto:tilalsharqiya@gmail.com">tilalsharqiya@gmail.com</a></p>
+            <a href="#contact" class="btn">Contact Us</a>
+        </div>
+    </section>
+</body>
+</html>
