main page is responsive till this stage

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 
 
 
-
-logistics_Services
+<!-- 
+logistics_Services -->
 
 <section class="services_section container1" id="services">
   <h2 class="section-heading lang lang-en_b">Our Services</h2>
@@ -345,8 +345,7 @@ logistics_Services
   </section>
   
 
-<!-- Contact section -->
-<section id="contact">
+<section id="contact" class="container1 container_contact">
   <div class="container1 container_contact">
       <h2 class="lang lang-en_b">Contact Information</h2>
       <h2 class="lang lang-ar_b" style="display: none;">معلومات الاتصال</h2>
