--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bbout Us - Tilal Sharqiyah Trading & Logistics</title>
+    <title>About Us - Tilal Sharqiyah Trading</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
     <!-- Font Awesome -->
@@ -10,6 +10,19 @@
     <style>
 
 
+
+:root {
+  --secondary-color: #3188eb;
+  --primary-color: #2081ef;
+ 
+  --background-color1: #f9f7f7;
+  --text-color: #333;
+  --white-color: #ffffff;
+  --black-color: #000000;
+  --gray-color: #575a7b;
+  --light-gray-color: #f8f8f8;
+  --heading-color: #154161; 
+}
 
 
 html{
@@ -25,13 +38,15 @@ html{
 section{
     height: 100vh;
     padding: 20px;
+ 
 }
+
 
 .hero {
   
     display: flex;
     align-items: center;
-    background-color: #f5f5f5;
+    background-color:var(--white-color);
     flex-wrap: wrap; /* Allows flex items to wrap onto multiple lines */
 }
 
@@ -48,43 +63,38 @@ section{
 
 h1 {
     text-align: center;
-    font-size: 4vw; /* Adjust font size according to viewport width */
-    color: #333;
+    font-size: 3.5vw; /* Adjust font size according to viewport width */
+    color: var(--heading-color);
+
     margin-bottom: 20px;
 }
 
 p {
-    text-align: center;
+
     font-size: 1em; /* Adjust font size according to viewport width */
-    color: #666;
+    color: var(--text-color);
     margin-bottom: 20px;
 }
 
-h2 {
-    font-size: 2.5vw;
-    color: #666;
-    text-transform: uppercase;
-    /* margin-bottom: 10px; */
-}
 
 button {
     padding: 10px 20px;
-    color: white;
-    background-color: #4CAF50;
+    color: var(--white-color);
+    background-color: var(--primary-color);
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
 .about_button:hover {
-    background-color: #45a049;
+    background-color: var(--secondary-color);
 }
 
 
 /* ========================= */
 
 
-.shopify-story {
+.tilal-story {
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -132,13 +142,16 @@ align-items: center;
     align-items: center;
     justify-content: space-between;
 
-    background-color: #f5f5f5;
+    background-color: var(--white-color);
     flex-wrap: wrap; 
  
 }
 
 
-
+section h2{
+    color: var(--gray-color);
+    font-size: 2vw;
+}
 .text-content,.image-content {
     flex: 1 1 50%; /* Flex grow, flex shrink, and flex-basis */
     padding: 20px;
@@ -149,6 +162,18 @@ align-items: center;
     width: 100%;
     height: auto;
     display: block;
+}
+.content_mission p{
+    text-align: center;
+}
+
+
+/* ====================== */
+@media (max-width: 768px) {
+    section,  .mission-section{
+        height: 100%;
+    }
+   
 }
 
     </style>
@@ -170,10 +195,10 @@ align-items: center;
         <!-- Menu -->
         <ul id="nav-menu">
           <li><a href="../index.html" class="lang lang-en">Home</a><a href="#home" class="lang lang-ar" style="display: none;">الرئيسية</a></li>
-          <li><a href="#" class="lang lang-en">About</a><a href="#about" class="lang lang-ar" style="display: none;">عن الشركة</a></li>
-          <li><a href="../pages/services.html" class="lang lang-en">Services</a><a href="#services" class="lang lang-ar" style="display: none;">الخدمات</a></li>
-          <li><a href="../index.html#clients" class="lang lang-en">Clients</a><a href="#clients" class="lang lang-ar" style="display: none;">العملاء</a></li>
-          <li><a href="../index.html#contact" class="lang lang-en">Contact</a><a href="#contact" class="lang lang-ar" style="display: none;">تواصل</a></li>
+          <li><a href="#" class="lang lang-en">About Us</a><a href="#about" class="lang lang-ar" style="display: none;">عن الشركة</a></li>
+          <li><a href="../pages/services.html" class="lang lang-en">Our Services</a><a href="#services" class="lang lang-ar" style="display: none;">الخدمات</a></li>
+          <li><a href="../index.html#clients" class="lang lang-en">Our Partners</a><a href="#clients" class="lang lang-ar" style="display: none;">العملاء</a></li>
+          <li><a href="../index.html#contact" class="lang lang-en">Contact Us</a><a href="#contact" class="lang lang-ar" style="display: none;">تواصل</a></li>
           <li class="mobile-lang">      <button id="language-toggle" onclick="toggleLanguage()">العربية / English</button></li>
         </ul>
         <div class="desktop-lang">
@@ -184,12 +209,9 @@ align-items: center;
     <section class="hero">
         <div class="content">
             <h1 class="about_h1">About Tilal Sharqiyah Trading </h1>
-            <p class="about_p"> Tilal Sharqiyah Trading & Logistics is a dynamic and multifaceted organization dedicated to 
-                excellence across a spectrum of industries. With over a decade of experience, we have established ourselves as
-                 a trusted partner in healthcare supplies, logistics, construction, and transportation. Our commitment to delivering 
-                 superior quality and efficiency has propelled us to the forefront of these sectors, making us a preferred choice for
-                  clients seeking reliable and innovative solutions.
+            <p class="about_p">At Tilal Sharqiyah Trading, we are a dynamic and multifaceted organisation dedicated to excellence in number of industries. Established with a dedication to delivering superior quality and efficiency , we've emerged as a trusted partner in the fields of medical supplies, surgical items supply, transportation, construction, logistics, and Cleaning offerings
             </p>
+            
             <button onclick="location.href='../index.html#contact';" style="cursor: pointer;" class="about_button">Get Started</button>
         </div>
         <div class="images">
@@ -199,14 +221,14 @@ align-items: center;
 
 
 
-    <section class="shopify-story">
+    <section class="tilal-story">
         <div class="image-container">
             <img src="../images/silder2.jpg" alt="Snowy Landscape">
             <!-- Additional images or content here -->
         </div>
         <div class="text-container">
-            <h1>The first Shopify store was our own</h1>
-            <p>Over a decade ago, we started a store to sell snowboards online. None of the ecommerce solutions at the time gave us the control we needed to be successful—so we built our own. Today, businesses of all sizes use Shopify, whether they’re selling online, in retail stores, or on-the-go.</p>
+            <h1>The first tilal store was our own</h1>
+            <p>Over a decade ago, we started a store to sell snowboards online. None of the ecommerce solutions at the time gave us the control we needed to be successful—so we built our own. Today, businesses of all sizes use tilal, whether they’re selling online, in retail stores, or on-the-go.</p>
         </div>
     </section>
 
@@ -214,8 +236,8 @@ align-items: center;
     <section class="mission-section">
         <div class="content_mission">
             <h2>OUR MISSION</h2>
-            <h1>Making commerce better for everyone</h1>
-            <p>We help people achieve independence by making it easier to start, run, and grow a business. We believe the future of commerce has more voices, not fewer, so we’re reducing the barriers to business ownership to make commerce better for everyone.</p>
+            <h1>Making Living better for everyone</h1>
+            <p>To provide high-quality services and solutions in medicine resources, surgical objects supply, transportation and logistics services whilst upholding the highest standards of exceptional, integrity, and innovation.</p>
         </div>
     </section>
 
@@ -225,7 +247,7 @@ align-items: center;
         <div class="text-content">
             <h2>OUR TEAM AND OUR SOCIAL IMPACT</h2>
             <h1>Creating a community for impact</h1>
-            <p>Shopify has grown from 5 people in a coffee shop to over 10,000 across the globe. With millions of businesses powered by Shopify, we invest in our people and our communities. Our Social Impact initiatives focus on enabling an equitable future by building products and programs to support our team and merchants.</p>
+            <p>tilal has grown from 5 people in a coffee shop to over 10,000 across the globe. With millions of businesses powered by tilal, we invest in our people and our communities. Our Social Impact initiatives focus on enabling an equitable future by building products and programs to support our team and merchants.</p>
         </div>
         <div class="image-content">
             <img src="..//images/slider1.jpg" alt="Team Image">
